--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "antd": "^4.21.4",
     "craco": "0.0.3",
     "craco-less": "^2.0.0",
     "echarts": "^5.3.3",
@@ -19,6 +20,7 @@
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.2",
     "react-dom": "^18.2.0",
+    "react-draggable-tabs": "^1.0.8",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
