--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,8 +22,12 @@
     "react-data-table-component": "^7.5.2",
     "react-dom": "^18.2.0",
     "react-draggable-tabs": "^1.0.8",
+    "react-native": "^0.69.1",
+    "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "redux-devtools": "^3.7.0",
     "styled-components": "^5.3.5",
+    "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
