--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "antd": "^4.21.4",
+    "axios": "^0.27.2",
     "craco": "0.0.3",
     "craco-less": "^2.0.0",
     "echarts": "^5.3.3",
