--- a/package.json
+++ b/package.json
@@ -1,58 +1,28 @@
 {
-  "name": "react-ts-less-template",
-  "version": "0.1.0",
+  "name": "vite-project",
   "private": true,
+  "version": "0.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.41",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "antd": "^4.21.4",
-    "axios": "^0.27.2",
-    "craco": "0.0.3",
-    "craco-less": "^2.0.0",
+    "antd": "^4.21.6",
     "echarts": "^5.3.3",
     "echarts-for-react": "^3.0.2",
     "less": "^4.1.3",
-    "less-loader": "^11.0.0",
-    "react": "^18.2.0",
-    "react-data-table-component": "^7.5.2",
-    "react-dom": "^18.2.0",
-    "react-draggable-tabs": "^1.0.8",
-    "react-native": "^0.69.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-redux": "^8.0.2",
-    "react-scripts": "5.0.1",
     "redux-devtools": "^3.7.0",
-    "styled-components": "^5.3.5",
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
-  "scripts": {
-    "start": "craco start",
-    "build": "craco build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "vite": "^2.9.9"
   }
 }
